@@ -69,10 +69,10 @@ $(OUT)/Pure: $(BOOTSTRAP_FILES) Concurrent/cache.ML			\
   Isar/local_syntax.ML Isar/local_theory.ML Isar/locale.ML		\
   Isar/method.ML Isar/object_logic.ML Isar/obtain.ML Isar/outer_lex.ML	\
   Isar/outer_syntax.ML Isar/overloading.ML Isar/parse.ML		\
-  Isar/parse_value.ML Isar/proof.ML Isar/proof_context.ML		\
-  Isar/proof_display.ML Isar/proof_node.ML Isar/rule_cases.ML		\
-  Isar/rule_insts.ML Isar/runtime.ML Isar/skip_proof.ML			\
-  Isar/spec_parse.ML Isar/spec_rules.ML Isar/specification.ML		\
+  Isar/parse_spec.ML Isar/parse_value.ML Isar/proof.ML			\
+  Isar/proof_context.ML Isar/proof_display.ML Isar/proof_node.ML	\
+  Isar/rule_cases.ML Isar/rule_insts.ML Isar/runtime.ML			\
+  Isar/skip_proof.ML Isar/spec_rules.ML Isar/specification.ML		\
   Isar/theory_target.ML Isar/toplevel.ML Isar/typedecl.ML		\
   ML/ml_antiquote.ML ML/ml_compiler.ML ML/ml_compiler_polyml-5.3.ML	\
   ML/ml_context.ML ML/ml_env.ML ML/ml_lex.ML ML/ml_parse.ML		\
